--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         </section>
         <section class="content">
-            <article id="search-engine-optimization" class="search-engine-optimization">
+            <article id="search-engine-optimization" class="main-content">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                     alt="Desk with notebook, laptop, coffee mug, and cup with pens.">
                 <h2>Search Engine Optimization</h2>
@@ -49,7 +49,7 @@
                     your visibility and find the right customers for your business.
 
             </article>
-            <article id="online-reputation-management" class="online-reputation-management">
+            <article id="online-reputation-management" class="main-content">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                     alt="Man working on laptop and looking at phone.">
                 <h2>Online Reputation Management</h2>
@@ -59,7 +59,7 @@
                 gives you the control over what potential customers see when they search for your business.
 
             </article>
-            <article id="social-media-marketing" class="social-media-marketing">
+            <article id="social-media-marketing" class="main-content">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                     alt="Group of people brainstorming social media marketing strategies.">
                 <h2>Social Media Marketing</h2>
@@ -71,7 +71,7 @@
             </article>
         </section>
         <section class="benefits">
-            <section class="benefit-lead">
+            <section class="benefit">
                 <h3>Lead Generation</h3>
 
                 <img src="./assets/images/lead-generation.png" alt="Gear feeding into funnel and coming out as a coin.">
@@ -80,7 +80,7 @@
                 directly to your website.
 
             </section>
-            <section class="benefit-brand">
+            <section class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="Lightbulb in suit with spidey-sense going off.">
 
@@ -88,7 +88,7 @@
                 visibility for your business.
 
             </section>
-            <section class="benefit-cost">
+            <section class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"
                     alt="Gear with two types of coins, showing you are saving money.">
