--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             </section>
         </section>
-    </Main>
+    </main>
     <footer>
         <section class="footer">
             <h2 class="footer">Made with ❤️️ by Horiseon</h2>
